# android_nettools

./: .gitignore  README.md  build.gradle.kts  memory.md  run_copilot.sh  settings.gradle.kts
.github/: copilot-instructions.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/curl/: supported-options.txt
app/src/main/cpp/: CMakeLists.txt  nativecurlbridge.cpp
app/src/main/kotlin/dev/nettools/android/: MainActivity.kt  NetToolsApp.kt
app/src/main/kotlin/dev/nettools/android/di/: AppCoroutineScope.kt  CurlModule.kt  DatabaseModule.kt  SshModule.kt
app/src/main/kotlin/dev/nettools/android/service/: CurlForegroundService.kt  CurlRunExecutionCoordinator.kt  CurlRunHolder.kt  NotificationHelper.kt  PendingCurlRunParams.kt  PendingTransferParams.kt  SftpConnectionParams.kt  TransferForegroundService.kt  TransferIoSupport.kt  TransferProgressHolder.kt
app/src/main/kotlin/dev/nettools/android/ui/: HomeScreen.kt  HomeViewModel.kt
app/src/main/kotlin/dev/nettools/android/util/: CurlUserMessageFormatter.kt  Extensions.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_nettools_hero.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/kotlin/dev/nettools/android/: ExampleUnitTest.kt
docs/: CODE_REVIEW1_TODO.md  CURL_SPECS.md  CURL_TODO.md  INT_TESTS1_TODO.md  SPECS.md  TODO.md  UIUX_REVIEW1.md  UIUX_REVIEW1_TODO.md  UNIT_TESTS1_TODO.md  memory.md  prompts.md  prompts.md~
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_native_deps.sh
(+127 files in other folders)
